# f1tenth-autonomous-driving

./: .gitignore  FILE_INVENTORY.md  GITHUB_UPLOAD_GUIDE.md  README.md
docs/: algorithm_notes.md
projects/gap-following/: README.md  package.xml  setup.cfg  setup.py
projects/gap-following/gap_following/: gap_follow_node.py
projects/nav2-minimal-stack/: CMakeLists.txt  README.md  package.xml
projects/nav2-minimal-stack/config/: mapper_params_online_async.yaml  nav2_params.yaml
projects/nav2-minimal-stack/launch/: global_costmap_only_4nodes.launch.py
projects/nav2-minimal-stack/scripts/: logger_node_amcl.py
projects/pure-pursuit/: README.md  package.xml  setup.py
projects/pure-pursuit/pure_pursuit/: pure_pursuit_node.py  waypoints.csv
projects/waypoint-tools/: README.md
projects/waypoint-tools/src/: map_waypoints_logger.py  waypoint_marker_publisher.py
resources/maps/: README.md  final.pgm  final.yaml  my_map.pgm  my_map.yaml
resources/waypoints/: README.md  optimal_waypoints.csv  optimal_waypoints1.csv  wp-map-2026-06-01-09-57-51.csv  wp-map-2026-06-01-09-58-33.csv  wp-map-2026-06-01-10-12-00.csv  wp-map-2026-06-02-06-17-59.csv  wp-map-2026-06-02-06-18-13.csv  wp-map-2026-06-02-07-44-11.csv  wp-map-2026-06-15-05-51-59.csv  wp-map-2026-06-15-05-53-19.csv  wp-map-2026-06-15-05-53-49.csv  wp-map-2026-06-15-08-46-44.csv  wp-map-2026-06-15-08-47-18.csv  wp-map-2026-06-15-09-08-56.csv  wp-map-2026-06-17-08-26-33.csv  wp-map-2026-06-17-08-28-09.csv  wp-map-2026-06-17-08-30-05.csv  wp-map-2026-06-17-08-30-34.csv  wp.csv  wp_hy.csv
